<?xml version="1.0"?>
<package format="2">
  <name>urdfdom_headers</name>
  <version>1.0.5</version>
  <description>
     core data structure headers for URDF
  </description>

  <maintainer email="denis@thekobi.com">Denis Cavalli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
